--- a/MapMaven/Components/SideNav.razor
+++ b/MapMaven/Components/SideNav.razor
@@ -1,4 +1,5 @@
 ﻿<MudDrawer Open="true" Elevation="1">
+    hhfhhhhfhhhhf
     <PlayerProfile></PlayerProfile>
     <MudNavMenu Color="Color.Primary" Bordered="true" Class="full-height">
         <div @onclick="OnMapsNavigation">
