--- a/MapMaven/Pages/Maps.razor
+++ b/MapMaven/Pages/Maps.razor
@@ -1,7 +1,7 @@
 ﻿@inherits ReactiveComponent
 
 @page "/"
-
+@*
 <MapBrowser Maps="MapList">
     <HeaderContent>
         <MapBrowserHeader></MapBrowserHeader>
@@ -9,7 +9,7 @@
     <RowContent>
         <MapBrowserRow Map="context.Map"></MapBrowserRow>
     </RowContent>
-</MapBrowser>
+</MapBrowser>*@
 
 @code {
     [Inject]
