--- a/MapMaven/Pages/RankedMaps.razor
+++ b/MapMaven/Pages/RankedMaps.razor
@@ -10,7 +10,7 @@
             <RankedMapBrowserHeader></RankedMapBrowserHeader>
         </HeaderContent>
         <RowContent>
-            <RankedMapBrowserRow Map="context.Map" FilteredMaps="context.FilteredMaps"></RankedMapBrowserRow>
+            <RankedMapBrowserRow FilteredMaps="context.FilteredMaps"></RankedMapBrowserRow>
         </RowContent>
     </MapBrowser>
 </div>
