--- a/MapMaven/Pages/Maps.razor
+++ b/MapMaven/Pages/Maps.razor
@@ -1,15 +1,15 @@
 ﻿@inherits ReactiveComponent
 
 @page "/"
-@*
+
 <MapBrowser Maps="MapList">
     <HeaderContent>
         <MapBrowserHeader></MapBrowserHeader>
     </HeaderContent>
     <RowContent>
-        <MapBrowserRow Map="context.Map"></MapBrowserRow>
+        <MapBrowserRow></MapBrowserRow>
     </RowContent>
-</MapBrowser>*@
+</MapBrowser>
 
 @code {
     [Inject]
