--- a/MapMaven/_Imports.razor
+++ b/MapMaven/_Imports.razor
@@ -7,6 +7,7 @@
 @using MudBlazor
 @using MapMaven
 @using MapMaven.Components
+@using MapMaven.Components.Shared
 @using MapMaven.Components.Maps
 @using MapMaven.Components.Playlists
 @using MapMaven.Models
