--- a/MapMaven/Pages/RankedMaps.razor
+++ b/MapMaven/Pages/RankedMaps.razor
@@ -5,7 +5,7 @@
 
 <div class="d-flex full-height overflow-hidden">
     <ImprovementTweaker OnMapSelectionChanged="OnMapSelectionChanged"></ImprovementTweaker>
-    <MapBrowser @ref="MapBrowser" Maps="MapList" Selectable="true" Width="calc(100% - 240px)">
+    <MapBrowser @ref="MapBrowser" Maps="MapList" Selectable="true" RankedMaps="true" Width="calc(100% - 240px)">
         <HeaderContent>
             <RankedMapBrowserHeader></RankedMapBrowserHeader>
         </HeaderContent>
