--- a/MapMaven/Components/Playlists/PlaylistList.razor
+++ b/MapMaven/Components/Playlists/PlaylistList.razor
@@ -15,9 +15,9 @@
     {
         <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist.FileName" Class="py-0 px-1">
             <div class="playlist-list-item">
-                @if (!string.IsNullOrEmpty(playlist.CoverImage))
+                @if (!string.IsNullOrEmpty(playlist.CoverImage.Value))
                 {
-                    <img src="data:image/png;@playlist.CoverImage" class="ml-3 mr-3" />
+                    <img src="data:image/png;@playlist.CoverImage.Value" class="ml-3 mr-3" />
                 }
                 else
                 {
@@ -48,9 +48,9 @@
     {
         <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist.FileName" Class="py-0 px-1">
             <div class="playlist-list-item">
-                @if (!string.IsNullOrEmpty(playlist.CoverImage))
+                @if (!string.IsNullOrEmpty(playlist.CoverImage.Value))
                 {
-                    <img src="data:image/png;@playlist.CoverImage" class="ml-3 mr-3" />
+                    <img src="data:image/png;@playlist.CoverImage.Value" class="ml-3 mr-3" />
                 }
                 else
                 {
