Fixed playbackprogress circle positioning

--- a/MapMaven/Components/Maps/SongPlaybackButton.razor
+++ b/MapMaven/Components/Maps/SongPlaybackButton.razor
@@ -2,7 +2,7 @@
 
 @inherits ReactiveComponent
 
-<div class="relative">
+<div class="relative d-flex justify-center">
     @if (CurrentlyPlaying)
     {
         <div class="playback-progress">
