Showing progress when downloading single map + ability to cancel

--- a/MapMaven/Components/Shared/MapDownloadProgressMessage.razor
+++ b/MapMaven/Components/Shared/MapDownloadProgressMessage.razor
@@ -20,7 +20,15 @@
 
         @if (Progress != null && Progress.TotalItems != Progress.CompletedItems)
         {
-            @:- Adding map: @Progress.CurrentItem.Name (@(Progress.CompletedItems + 1)/@Progress.TotalItems) (@totalProgressPercentage.ToString("#0") %)
+            <text>
+                @(CreatingPlaylist ? "- " : "")
+                Adding map: @Progress.CurrentItem.Name 
+                @if (Progress.TotalItems > 1)
+                {
+                    @: (@(Progress.CompletedItems + 1) / @Progress.TotalItems) 
+                }
+                (@totalProgressPercentage.ToString("#0") %)
+            </text>
         }
     </span>
 
