--- a/MapMaven/Components/Maps/MapBrowser.razor
+++ b/MapMaven/Components/Maps/MapBrowser.razor
@@ -45,7 +45,7 @@
         }
     </LoadingContent>
     <NoRecordsContent>
-        @if (SelectedPlaylist?.IsDynamicPlaylist == true)
+        @if (SelectedPlaylist?.IsDynamicPlaylist == true && string.IsNullOrEmpty(SearchString))
         {
             <MudProgressLinear Color="Color.Primary" Indeterminate="true" Style="position: absolute; top: 0;" />
             <MudIcon Icon="@Icons.Material.Filled.ManageSearch" Style="vertical-align: middle; margin-bottom: 4px;"></MudIcon> @:Nothing yet. Dynamic playlist is still being generated. Maps will appear once all the maps have been downloaded.
