Playlist list own scrollbar

--- a/MapMaven/Components/SideNav.razor
+++ b/MapMaven/Components/SideNav.razor
@@ -2,7 +2,7 @@
 
 <MudDrawer Open="true" Elevation="1" Class="sidenav">
     <PlayerProfile></PlayerProfile>
-    <MudNavMenu Color="Color.Primary" Bordered="true" Class="full-height">
+    <MudNavMenu Color="Color.Primary" Bordered="true" Class="full-height" Style="display: flex; flex-direction: column; flex: 1; min-height: 0;">
         <div @onclick="OnMapsNavigation">
             <MudNavLink Icon="@Icons.Filled.LibraryMusic"
                         DisableRipple="true"
