--- a/MapMaven/Components/Playlists/PlaylistList.razor
+++ b/MapMaven/Components/Playlists/PlaylistList.razor
@@ -1,67 +1,73 @@
 ﻿@using MapMaven.Models.Data.Playlists
 
-<MudList Class="d-flex flex-column" Clickable="true" @bind-SelectedValue="SelectedPlaylistValue" Color="Color.Primary">
-    <MudListSubheader Class="d-flex align-center justify-space-between py-2" Style="border-top: 1px solid var(--mud-palette-table-lines)">
-        <div class="d-flex align-center">
-            <MudIcon Icon="@Icons.Filled.PlaylistPlay"></MudIcon> Playlists
-        </div>
-        <MudIconButton Icon="@Icons.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="OpenAddPlaylistDialog" />
-    </MudListSubheader>
-    @if (LoadingPlaylists)
-    {
-        <MudProgressCircular Color="Color.Info" Size="Size.Small" Indeterminate="true" Class="align-self-center" />
-    }
-    @foreach (var playlist in Playlists)
-    {
-        <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist.FileName" Class="py-0 px-1">
-            <div class="playlist-list-item">
-                @if (!string.IsNullOrEmpty(playlist.CoverImageSmall.Value))
-                {
-                    <img src="data:image/png;@playlist.CoverImageSmall.Value" class="ml-3 mr-3" />
-                }
-                else
-                {
-                    <MudIcon Icon="@Icons.Filled.PlaylistPlay" Class="ml-3 mr-3" Style="width: 30px; height: 30px"></MudIcon>
-                }
-                <span>@playlist.Title</span>
-                <MudMenu Icon="@Icons.Material.Filled.MoreVert" Class="ml-auto">
-                    <MudMenuItem OnClick="() => OpenEditPlaylistDialog(playlist)">Edit</MudMenuItem>
-                    <MudMenuItem OnClick="() => OpenDeletePlaylistDialog(playlist)">Delete</MudMenuItem>
-                </MudMenu>
+<div style="flex: 1; min-height: 0;">
+    <MudList Class="d-flex flex-column" Clickable="true" @bind-SelectedValue="SelectedPlaylistValue" Color="Color.Primary" Style="height: 50%;">
+        <MudListSubheader Class="d-flex align-center justify-space-between py-2" Style="border-top: 1px solid var(--mud-palette-table-lines)">
+            <div class="d-flex align-center">
+                <MudIcon Icon="@Icons.Filled.PlaylistPlay"></MudIcon> Playlists
             </div>
-        </MudListItem>
-    }
-</MudList>
+            <MudIconButton Icon="@Icons.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="OpenAddPlaylistDialog" />
+        </MudListSubheader>
+        @if (LoadingPlaylists)
+        {
+            <MudProgressCircular Color="Color.Info" Size="Size.Small" Indeterminate="true" Class="align-self-center" />
+        }
+        <div style="overflow-y: auto;">
+            @foreach (var playlist in Playlists)
+            {
+                <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist.FileName" Class="py-0 px-1" Style="height: 56px;">
+                    <div class="playlist-list-item">
+                        @if (!string.IsNullOrEmpty(playlist.CoverImageSmall.Value))
+                        {
+                            <img src="data:image/png;@playlist.CoverImageSmall.Value" class="ml-3 mr-3" />
+                        }
+                        else
+                        {
+                            <MudIcon Icon="@Icons.Filled.PlaylistPlay" Class="ml-3 mr-3" Style="width: 30px; height: 30px"></MudIcon>
+                        }
+                        <span>@playlist.Title</span>
+                        <MudMenu Icon="@Icons.Material.Filled.MoreVert" Class="ml-auto">
+                            <MudMenuItem OnClick="() => OpenEditPlaylistDialog(playlist)">Edit</MudMenuItem>
+                            <MudMenuItem OnClick="() => OpenDeletePlaylistDialog(playlist)">Delete</MudMenuItem>
+                        </MudMenu>
+                    </div>
+                </MudListItem>
+            }
+        </div>
+    </MudList>
 
-<MudList Class="d-flex flex-column" Clickable="true" @bind-SelectedValue="SelectedPlaylistValue" Color="Color.Primary">
-    <MudListSubheader Class="d-flex align-center justify-space-between py-2" Style="border-top: 1px solid var(--mud-palette-table-lines)">
-        <div class="d-flex align-center">
-            <MudIcon Icon="@Icons.Filled.PlaylistPlay"></MudIcon> Dynamic Playlists
-        </div>
-        <MudIconButton Icon="@Icons.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="OpenAddDynamicPlaylistDialog" />
-    </MudListSubheader>
-    @if (LoadingPlaylists)
-    {
-        <MudProgressCircular Color="Color.Info" Size="Size.Small" Indeterminate="true" Class="align-self-center" />
-    }
-    @foreach (var playlist in DynamicPlaylists)
-    {
-        <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist.FileName" Class="py-0 px-1">
-            <div class="playlist-list-item">
-                @if (!string.IsNullOrEmpty(playlist.CoverImageSmall.Value))
-                {
-                    <img src="data:image/png;@playlist.CoverImageSmall.Value" class="ml-3 mr-3" />
-                }
-                else
-                {
-                    <MudIcon Icon="@Icons.Filled.PlaylistPlay" Class="ml-3 mr-3" Style="width: 30px; height: 30px"></MudIcon>
-                }
-                <span>@playlist.Title</span>
-                <MudMenu Icon="@Icons.Material.Filled.MoreVert" Class="ml-auto">
-                    <MudMenuItem OnClick="() => OpenEditPlaylistDialog(playlist)">Edit</MudMenuItem>
-                    <MudMenuItem OnClick="() => OpenDeletePlaylistDialog(playlist)">Delete</MudMenuItem>
-                </MudMenu>
+    <MudList Class="d-flex flex-column" Clickable="true" @bind-SelectedValue="SelectedPlaylistValue" Color="Color.Primary" Style="height: 50%;">
+        <MudListSubheader Class="d-flex align-center justify-space-between py-2" Style="border-top: 1px solid var(--mud-palette-table-lines)">
+            <div class="d-flex align-center">
+                <MudIcon Icon="@Icons.Filled.PlaylistPlay"></MudIcon> Dynamic Playlists
             </div>
-        </MudListItem>
-    }
-</MudList>
+            <MudIconButton Icon="@Icons.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="OpenAddDynamicPlaylistDialog" />
+        </MudListSubheader>
+        @if (LoadingPlaylists)
+        {
+            <MudProgressCircular Color="Color.Info" Size="Size.Small" Indeterminate="true" Class="align-self-center" />
+        }
+        <div style="overflow-y: auto;">
+            @foreach (var playlist in DynamicPlaylists)
+            {
+                <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist.FileName" Class="py-0 px-1" Style="height: 56px;">
+                    <div class="playlist-list-item">
+                        @if (!string.IsNullOrEmpty(playlist.CoverImageSmall.Value))
+                        {
+                            <img src="data:image/png;@playlist.CoverImageSmall.Value" class="ml-3 mr-3" />
+                        }
+                        else
+                        {
+                            <MudIcon Icon="@Icons.Filled.PlaylistPlay" Class="ml-3 mr-3" Style="width: 30px; height: 30px"></MudIcon>
+                        }
+                        <span>@playlist.Title</span>
+                        <MudMenu Icon="@Icons.Material.Filled.MoreVert" Class="ml-auto">
+                            <MudMenuItem OnClick="() => OpenEditPlaylistDialog(playlist)">Edit</MudMenuItem>
+                            <MudMenuItem OnClick="() => OpenDeletePlaylistDialog(playlist)">Delete</MudMenuItem>
+                        </MudMenu>
+                    </div>
+                </MudListItem>
+            }
+        </div>
+    </MudList>
+</div>
