--- a/MapMaven/Components/Playlists/PlaylistList.razor
+++ b/MapMaven/Components/Playlists/PlaylistList.razor
@@ -1,5 +1,7 @@
 ﻿@using MapMaven.Models.Data.Playlists
 
+@inherits ReactiveComponent
+
 <div class="fill-remaining-space">
     <MudList Class="d-flex flex-column" Clickable="true" @bind-SelectedValue="SelectedPlaylistValue" Color="Color.Primary" Style="height: 50%;">
         <MudListSubheader Class="d-flex align-center justify-space-between py-2" Style="border-top: 1px solid var(--mud-palette-table-lines)">
@@ -8,14 +10,24 @@
             </div>
             <MudIconButton Icon="@Icons.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="OpenAddPlaylistDialog" />
         </MudListSubheader>
+        <MudTextField @bind-Value="PlaylistSearchText"
+                      DebounceInterval="300"
+                      Immediate="true"
+                      Placeholder="Search"
+                      Variant="Variant.Outlined"
+                      Adornment="Adornment.Start"
+                      AdornmentIcon="@Icons.Material.Filled.Search"
+                      IconSize="Size.Small"
+                      Class="mx-4 mb-4 small-input">
+        </MudTextField>
         @if (LoadingPlaylists)
         {
             <MudProgressCircular Color="Color.Info" Size="Size.Small" Indeterminate="true" Class="align-self-center" />
         }
-        <div style="overflow-y: auto;">
+        <div class="full-height" style="overflow-y: auto;">
             @foreach (var playlist in Playlists)
             {
-                <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist.FileName" Class="py-0 px-1" Style="height: 56px;">
+                <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist.FileName" Class="py-0 px-1" Style="height: 46px;">
                     <div class="playlist-list-item">
                         @if (!string.IsNullOrEmpty(playlist.CoverImageSmall.Value))
                         {
@@ -43,14 +55,24 @@
             </div>
             <MudIconButton Icon="@Icons.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="OpenAddDynamicPlaylistDialog" />
         </MudListSubheader>
+        <MudTextField @bind-Value="DynamicPlaylistSearchText"
+                      DebounceInterval="300"
+                      Immediate="true"
+                      Placeholder="Search"
+                      Variant="Variant.Outlined"
+                      Adornment="Adornment.Start"
+                      AdornmentIcon="@Icons.Material.Filled.Search"
+                      IconSize="Size.Small"
+                      Class="mx-4 mb-4 small-input">
+        </MudTextField>
         @if (LoadingPlaylists)
         {
             <MudProgressCircular Color="Color.Info" Size="Size.Small" Indeterminate="true" Class="align-self-center" />
         }
-        <div style="overflow-y: auto;">
+        <div class="full-height" style="overflow-y: auto;">
             @foreach (var playlist in DynamicPlaylists)
             {
-                <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist.FileName" Class="py-0 px-1" Style="height: 56px;">
+                <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist.FileName" Class="py-0 px-1" Style="height: 46px;">
                     <div class="playlist-list-item">
                         @if (!string.IsNullOrEmpty(playlist.CoverImageSmall.Value))
                         {
