--- a/MapMaven/Components/Maps/MapBrowser.razor
+++ b/MapMaven/Components/Maps/MapBrowser.razor
@@ -29,7 +29,7 @@
         <MudTextField @bind-Value="SearchString"
                       DebounceInterval="300"
                       Immediate="true"
-                      Placeholder="Search"
+                      Placeholder="Search map name, song author, map author..."
                       Variant="Variant.Outlined"
                       Adornment="Adornment.Start"
                       AdornmentIcon="@Icons.Material.Filled.Search"
